code optimization for performance