@@ -21,9 +21,10 @@ to BigQuery.
 5. [Input path formation](#input-path-formation)
 6. [Output tables / BQ population](#output-tables--bq-population)
 7. [Configuration](#configuration)
-8. [Suggested Spark configuration](#suggested-spark-configuration)
-9. [Build, test, deploy](#build-test-deploy)
-10. [Known limitations / deferred work](#known-limitations--deferred-work)
+8. [Performance & scalability](#performance--scalability)
+9. [Suggested Spark configuration](#suggested-spark-configuration)
+10. [Build, test, deploy](#build-test-deploy)
+11. [Known limitations / deferred work](#known-limitations--deferred-work)
 
 ---
 
@@ -517,6 +518,217 @@ and unioned per entry).
 
 ---
 
+## Performance & scalability
+
+This section covers the JDK 21 / Spark 4.1 optimisations added in this
+revision, targeting three concrete challenges this job faces at real
+production scale: **data skew** (one message's attachment or applicable-
+feature-count can dwarf the median by orders of magnitude, in ways plain
+row-count-based partitioning does not account for), **thousands of
+Hyperscan zip bundles** shared across **millions of messages**, and running
+on a **shared Dataproc cluster** where this job cannot assume it has the
+cluster's full attention or that cluster-wide defaults suit its own skew
+shape. See [Suggested Spark configuration](#suggested-spark-configuration)
+below for the accompanying config-only tuning.
+
+### Eliminated: redundant work that scaled with (features × messages), not just messages
+
+Two real, measured anti-patterns existed in the per-message scan hot path —
+both scaling with how many lexicon features a message is evaluated against
+(legitimately dozens, per `DecisionTreeEvaluator.evaluateGroup`, which calls
+`FeatureScanOrchestrator.scanRow` once per applicable feature), not just
+with message count:
+
+- **A new native `Scanner` was constructed and destroyed on every single
+  scan call.** The `com.gliwka.hyperscan-java` wrapper's own `Scanner`
+  Javadoc: "In case of multithreaded scanning, you need one scanner
+  instance per CPU thread" — i.e. ONE, reused, not one per call. Confirmed
+  from the wrapper's own source: a `Scanner` holds a native function-pointer
+  callback and scratch space, both real, per-JVM-process native resources
+  the wrapper hard-caps at 256 live instances. `FeatureScanOrchestrator` now
+  owns exactly ONE `Scanner` for its entire lifetime (`implements AutoCloseable`,
+  one instance = one Spark partition, matching Spark's own
+  single-thread-per-task execution model), calling `allocScratch(database)`
+  before each scan (cheap/idempotent per the wrapper's own contract: "must
+  be called at least once with each database... before scan is called" —
+  calling it more often than strictly needed is safe) rather than
+  constructing/destroying the whole `Scanner` every time.
+- **`HtmlStrippingService.strip()` re-ran on the SAME subject/body/attachment
+  text once per applicable feature.** The text doesn't change across which
+  feature is being scanned — only the `Database` does. `FeatureScanOrchestrator.scannerFor`
+  now strips every area's text EXACTLY ONCE per message, and every
+  `scanRow` call for that message reuses the same precomputed
+  `StripResult`. Attachment `cleanText` uses a new `HtmlStrippingService.identity()`
+  path instead of `strip()` — attachment text is already HTML-free by the
+  time it reaches this engine (see `MessageAttachment` class Javadoc), so
+  running the full tag/whitespace-scanning algorithm (and allocating an
+  `int[]` sized to the text's length) on text that can legitimately be
+  megabytes long was pure waste for a transform guaranteed to be a no-op.
+  `OffsetMap.identity()` maps every position to itself in O(1), with no
+  backing array at all.
+
+Both are pure internal restructuring — behaviourally identical output,
+confirmed by the full existing test suite passing unchanged (see "Build,
+test, deploy" below); only the *amount of redundant work* per message
+changed.
+
+### Concurrent Hyperscan bundle prefetch (JDK 21 virtual threads)
+
+`HyperscanBundleLoader.prefetch(features)` (JDK 21's `Executors.newVirtualThreadPerTaskExecutor()`,
+a stable, non-preview API — no `--enable-preview` flag needed anywhere in
+the deploy pipeline) concurrently warms this partition's cache for a batch
+of distinct features before any message is actually scanned, so the first
+several messages in a partition don't each pay a COLD-CACHE GCS round-trip
+serially, one feature at a time, the way they otherwise would.
+
+**Why virtual threads are the right tool here, specifically, and not for
+Hyperscan scanning itself**: the work being parallelised — GCS download +
+zip extraction — is I/O-BOUND (waiting on network reads). Many concurrent
+virtual threads blocked on I/O consume no executor CPU while waiting, so
+this genuinely does not compete for the Spark task's allocated CPU core(s)
+— important multi-tenant behaviour on a **shared** cluster, where grabbing
+extra CPU beyond what YARN allocated this job would be poor citizenship.
+Hyperscan scanning itself is deliberately **not** parallelised this way —
+it's CPU-bound native work; virtual threads doing CPU-bound native (JNI)
+calls pin their carrier thread rather than yielding it, so "parallelising"
+CPU-bound scanning via virtual threads would not add real parallelism, only
+overhead, and — worse — could oversubscribe the core(s) this job was
+actually allocated. Scanning stays exactly as parallel as Spark's own task
+scheduling already makes it (one task per allocated core), which is the
+socially correct amount of parallelism to use on shared infrastructure.
+
+**Thread-safety, made safe without touching `LruCache`'s own contract**:
+`HyperscanBundleLoader`'s cache (`LruCache`) is deliberately NOT thread-safe
+(documented on that class itself) — matching this loader's normal,
+single-threaded, one-per-partition usage. `prefetch` stays safe under
+concurrency via a strict two-phase design: the expensive, cache-independent
+download/extract/parse work runs concurrently (one virtual thread per
+feature); only once every one of those has completed does a single,
+sequential, calling-thread-only loop insert the results into the cache —
+the cache itself is never actually touched by more than one thread at a
+time, regardless of how much concurrent I/O happened to produce those
+results. A feature that fails to prefetch (bad path, corrupt zip, transient
+GCS error) is silently skipped — best-effort only, since it will load
+synchronously, with its real error, the first time it's actually needed;
+prefetching must never be why a partition fails that would otherwise have
+succeeded.
+
+**Bounded lookahead, not a full-partition materialisation** — `PartitionProcessor`
+peeks at most a small, FIXED number of rows ahead (`PREFETCH_LOOKAHEAD_ROWS`,
+currently 200) purely to discover which distinct features the START of a
+partition will need, then prefetches those, then continues streaming the
+REST of the partition exactly as before (one row at a time from the
+iterator). This is a deliberate, load-bearing design choice, not an
+oversight: a partition can hold many thousands of messages, some
+individually large (big attachments) — buffering the WHOLE partition into a
+`List<Row>` to compute a fully exhaustive distinct-feature set would work
+directly against the bounded, one-row-at-a-time memory footprint
+`mapPartitions`'s iterator-based contract exists to provide, in exactly the
+"some messages can be very large" scenario this needs to stay safe under.
+`HyperscanBundleLoader.prefetch` also caps its own concurrent work at the
+cache's own `maxSize()` — never spending concurrent I/O effort warming
+entries that would just be evicted again before ever being consulted.
+
+### Handling data skew — two independent sources, not one
+
+A message's processing cost does not scale uniformly with its row's byte
+size in the shuffle — two genuinely independent dimensions matter here:
+
+1. **Attachment/body size skew** — one message's attachment text can be
+   megabytes while the median is kilobytes. This DOES flow through the
+   message↔view join's shuffle (attachment text is part of the AVRO row),
+   so Spark's own byte-size-based skew detection (AQE's skew-join handling)
+   is positioned to catch it — but only if its thresholds are tuned
+   aggressively enough for THIS job's specific skew shape, not left at
+   Spark's generic defaults (see [Suggested Spark configuration](#suggested-spark-configuration)).
+2. **Applicable-feature-count skew** — independently of attachment size, a
+   message tagged against an unusually large number of lexicon features
+   (a large `features` array collected per row by the view's own
+   `groupBy(message_id)`) costs proportionally more CPU to scan (one
+   `FeatureScanOrchestrator.scanRow` call per applicable feature), even if
+   its own text is unremarkable in size. This also contributes to the same
+   row's serialized byte size (more array elements = more bytes), so it is
+   NOT an entirely separate signal from Spark's perspective, but it is a
+   genuinely separate real-world CAUSE worth naming, since "spread work
+   evenly" tuning decisions (partition sizing, skew thresholds) should
+   account for both causes, not just the more obviously visible one
+   (attachment size).
+
+`ScanEngineJobRunner.applyJobSpecificSparkConf` sets AQE/skew-join
+thresholds explicitly (tightened from Spark's own defaults) and computes
+`spark.sql.shuffle.partitions` relative to the driver's own observed
+`defaultParallelism()` at job start, rather than trusting Spark's hardcoded
+default (200) or a shared cluster's own `spark-defaults.conf` to happen to
+suit this run's actual allocated core count. `spark.sql.files.maxPartitionBytes`
+is also tightened for the AVRO read side specifically, so fewer OTHER
+messages get bundled alongside one large one into the same initial
+partition, before any shuffle-stage rebalancing even has a chance to help.
+See [Suggested Spark configuration](#suggested-spark-configuration) for the
+exact values and reasoning.
+
+### Scaling to thousands of Hyperscan zip bundles across millions of messages
+
+- **One combined loader, one download per feature per partition** — see
+  [Hyperscan file processing](#hyperscan-file-processing-and-not-and-decomposed-terms)'s
+  "Optimization: why ONE combined loader now, not two." With potentially
+  thousands of distinct feature bundles across a whole job, and potentially
+  many concurrent partitions/executors each independently populating their
+  OWN cache, the SAME popular feature's zip can legitimately be downloaded
+  from GCS more than once across the whole job (once per partition that
+  needs it) — this is expected and accepted (broadcasting every bundle's
+  full bytes from the driver instead, to eliminate this entirely, was
+  deliberately rejected — see "Memory-safety design" below — since it would
+  risk driver OOM for a job dealing in potentially thousands of files of
+  unknown/unbounded individual size); tune `max-cached-databases-per-partition`
+  (and, indirectly, partition size/count) to bound how often it happens in
+  practice, not eliminate it structurally.
+- **`max-cached-databases-per-partition` sizing** — this single bound now
+  covers a partition's cumulative cached-bundle count (database + metadata
+  together, per the ONE-loader design above). With thousands of distinct
+  features in play, the RIGHT value depends on how many DISTINCT features a
+  typical partition's messages actually reference (not the job-wide total)
+  — too low and legitimate reuse thrashes (repeated eviction+reload of
+  features still in active rotation within one partition); too high and
+  per-partition native/off-heap memory grows unpredictably. Start from the
+  default (20) and raise it if profiling shows a real partition's distinct-feature
+  count typically exceeds it; watch `HyperscanBundleLoader.cachedCount()`-style
+  signals (not currently exported as a metric — worth adding if this becomes
+  a real tuning question) rather than guessing.
+- **Prefetch amortises cold-start latency, not total download volume** —
+  see "Concurrent Hyperscan bundle prefetch" above. It changes WHEN the
+  first several downloads happen (concurrently, at partition start) and how
+  long they collectively take (roughly the slowest one, not the sum), not
+  HOW MANY total downloads the whole job does.
+
+### Shared Dataproc cluster etiquette
+
+- **Never grab more CPU than YARN allocated this job.** The one place this
+  job introduces internal concurrency beyond Spark's own task scheduling —
+  `HyperscanBundleLoader.prefetch`'s virtual threads — is deliberately
+  scoped to I/O-bound work only (see above), which does not compete for
+  allocated CPU cores while blocked waiting on network reads. CPU-bound
+  Hyperscan scanning is deliberately left exactly as parallel as Spark's
+  own per-task-one-core model already makes it — resist the temptation to
+  "speed up" scanning with an ad hoc internal thread pool; on a shared
+  cluster, that CPU was never allocated to this job in the first place.
+- **This job sets its own critical Spark configs explicitly** (AQE/skew-join
+  thresholds, shuffle partition count, `maxPartitionBytes`, the Kryo
+  serializer) rather than relying on the shared cluster's
+  `spark-defaults.conf` — see `ScanEngineJobRunner.applyJobSpecificSparkConf`.
+  A cluster shared with other tenants' workloads has defaults shaped by
+  THEIR jobs too, not tuned with this job's specific skew profile in mind;
+  a job that depends on inherited global defaults being "close enough" is
+  fragile to other tenants' configuration changes it has no visibility
+  into or control over.
+- **Dynamic allocation stays the right default**, not a fixed
+  `--num-executors` — see [Suggested Spark configuration](#suggested-spark-configuration)'s
+  own "Dynamic allocation" section, unchanged by this pass: scaling to
+  actual workload (rather than reserving a fixed slice of the shared
+  cluster regardless of whether this run needs it) is itself part of being
+  a good multi-tenant citizen.
+
+---
+
 ## Suggested Spark configuration
 
 Starting points below — this job has not run against a live cluster yet
@@ -526,6 +738,16 @@ current Dataproc/Spark 4.x tuning guidance, not numbers pulled from an
 actual run. **Treat them as a starting point to monitor and adjust from**,
 particularly executor sizing and partition counts, once real message
 volumes and `.hdb`/metadata file sizes are known.
+
+**Some of these are no longer just "suggested" — they're set programmatically
+by the job itself**, in `ScanEngineJobRunner.applyJobSpecificSparkConf`
+(the Kryo serializer, AQE/skew-join thresholds, `spark.sql.shuffle.partitions`,
+`spark.sql.files.maxPartitionBytes` — see [Performance & scalability](#performance--scalability)'s
+"Shared Dataproc cluster etiquette" for why: a shared cluster's own
+`spark-defaults.conf` cannot be trusted to already suit this specific job's
+skew profile). Settings marked **(code-enforced)** below take effect
+regardless of the cluster's own defaults; everything else remains a
+`--properties`/submit-time suggestion only.
 
 ### Executor sizing — favor moderate cores per executor, not maximal
 
@@ -552,7 +774,14 @@ parallelism.
 auto-calculated default.** Hyperscan is accessed via JNI — every loaded
 `.hdb` database and every active `Scanner` consumes **off-heap** native
 memory that the JVM heap sizing (and therefore Dataproc's own default
-overhead calculation) knows nothing about. Term metadata objects
+overhead calculation) knows nothing about. Each concurrent task now holds
+exactly ONE `Scanner` for its whole lifetime (see
+[Performance & scalability](#performance--scalability) — reused across
+every scan rather than one per call), whose scratch space grows to fit the
+LARGEST database that task's partition ever scans against and is retained
+until the partition finishes — a bounded, predictable off-heap footprint
+per concurrent task, but still one this JVM-heap-based overhead
+calculation cannot see. Term metadata objects
 (`TermExpressionMetadata`) are ordinary on-heap Java objects (plain id
 lists), small relative to `.hdb` files, and not a significant contributor
 to this overhead figure on their own. Undersizing overhead is a likely
@@ -562,37 +791,67 @@ above (well beyond the ~1-4GB typical non-native-library default) and watch
 for container-killed errors; raise further if `.hdb` files turn out to be
 large or `max-cached-databases-per-partition` is increased.
 
-### Partitioning
+### Partitioning and skew handling **(code-enforced)**
 
 ```
-spark.sql.adaptive.enabled=true
-spark.sql.adaptive.coalescePartitions.enabled=true
-spark.sql.shuffle.partitions=<start at 2-3x total executor cores, let AQE adjust>
+spark.sql.adaptive.enabled=true                                     (code-enforced)
+spark.sql.adaptive.coalescePartitions.enabled=true                  (code-enforced)
+spark.sql.adaptive.skewJoin.enabled=true                            (code-enforced)
+spark.sql.adaptive.skewJoin.skewedPartitionFactor=3                 (code-enforced, tightened from Spark's default of 5)
+spark.sql.adaptive.skewJoin.skewedPartitionThresholdInBytes=128m    (code-enforced, tightened from Spark's default of 256m)
+spark.sql.adaptive.advisoryPartitionSizeInBytes=64m                 (code-enforced)
+spark.sql.shuffle.partitions=<max(200, 3 x defaultParallelism), computed at job start>  (code-enforced)
+spark.sql.files.maxPartitionBytes=67108864                          (code-enforced, 64MB — down from Spark's default 128MB)
 ```
 
-Adaptive Query Execution should stay on — it rebalances post-shuffle
-partition sizes automatically after the message↔view join and the view's
+Adaptive Query Execution rebalances post-shuffle partition sizes
+automatically after the message↔view join and the view's
 `groupBy(message_id)` aggregation, both of which have data-dependent skew
-potential (some messages legitimately have far more applicable features
-than others).
+potential from TWO independent sources — one message's attachment/body
+size, and independently, one message's applicable-feature count (see
+[Performance & scalability](#performance--scalability)'s "Handling data
+skew" for the full reasoning). The `skewedPartitionFactor`/
+`skewedPartitionThresholdInBytes` values above are deliberately tightened
+from Spark's own generic defaults (factor 5, 256MB) — a single message with
+an unusually large attachment can dwarf the median shuffle-partition size
+by far more than 5x while still being one real, unsplittable row, so the
+default threshold can under-react to exactly this job's skew shape.
+`spark.sql.shuffle.partitions` is computed relative to the driver's own
+observed `defaultParallelism()` at job start rather than left at Spark's
+hardcoded default of 200, which has no relationship to how many executor
+cores a given run actually has on a shared, dynamically-allocated cluster.
+`maxPartitionBytes` is tightened on the AVRO read side specifically so
+fewer OTHER messages get bundled alongside one large one into the same
+initial partition, before any shuffle-stage rebalancing even has a chance
+to help. **All of the above are set programmatically** in
+`ScanEngineJobRunner.applyJobSpecificSparkConf` — a `--properties` override
+at submit time can still change them if a specific run needs to, but the
+job no longer depends on the shared cluster's own defaults happening to
+already suit it.
 
-Aim for partitions large enough that a partition's `HyperscanBundleLoader`
-cache gets reused across a meaningful number of messages before the task
-ends (a partition of a few dozen messages barely benefits from the
-per-partition cache at all), but not so large that one
-partition's peak memory (its own message batch plus up to
-`max-cached-databases-per-partition` loaded `.hdb` files) risks exceeding
+Separately from the shuffle-partition count above, aim for
+`mapPartitions`-stage partitions large enough that a partition's
+`HyperscanBundleLoader` cache gets reused across a meaningful number of
+messages before the task ends (a partition of a few dozen messages barely
+benefits from the per-partition cache at all, and gets no benefit at all
+from `HyperscanBundleLoader.prefetch`'s concurrent warm-up either — see
+[Performance & scalability](#performance--scalability)), but not so large
+that one partition's peak memory (its own message batch plus up to
+`max-cached-databases-per-partition` loaded bundles) risks exceeding
 executor memory. A few thousand messages per partition is a reasonable
-target to tune around, adjusted by `spark.sql.files.maxPartitionBytes` on
-the AVRO read side or an explicit `.repartition()` after the join if the
-natural file-based partitioning doesn't land near that.
+target to tune around.
 
-### Serialization
+### Serialization **(code-enforced)**
 
 ```
-spark.serializer=org.apache.spark.serializer.KryoSerializer
+spark.serializer=org.apache.spark.serializer.KryoSerializer   (code-enforced)
 ```
 
+Set via `SparkSession.builder().config(...)` before `getOrCreate()` in
+`ScanEngineJobRunner` — `spark.serializer` is a "static" config that only
+takes effect if set before the `SparkContext` is actually constructed, NOT
+via `spark.conf().set(...)` afterward (unlike every other code-enforced
+setting on this page, which are ordinary runtime SQL configs).
 `PartitionProcessor`'s `mapPartitions` result type (`MessageProcessingResult`)
 is already read via `Encoders.kryo(...)` in code; setting Kryo as the
 **default** serializer (not just for that one Encoder) speeds up shuffle
@@ -678,6 +937,31 @@ still mean a meaningful number of concurrent GCS connections at job start
 safety margin for transient GCS throttling under that initial burst; the
 buffer size is worth profiling against actual zip sizes rather than guessed.
 
+### Garbage collection — Generational ZGC as an option for large-attachment workloads
+
+```
+spark.executor.extraJavaOptions=-XX:+UseZGC -XX:+ZGenerational
+```
+
+Not enabled by default (G1, JDK 21's default collector, remains a
+reasonable baseline) — offered here as a starting point WORTH TRYING if
+profiling shows GC pause time is a real problem, specifically because of
+this job's own allocation pattern: HTML-stripping, Hyperscan match
+processing, and JSON parsing all allocate short-lived `String`/`char[]`
+objects proportional to message/attachment TEXT SIZE, and "some messages
+can be very large" means this job's allocation pattern includes real
+outliers — occasional very large, short-lived objects mixed in with the
+usual small ones. Generational ZGC (JEP 439, a genuine JDK 21 production
+feature — **not preview**, just not the default collector) targets
+sub-millisecond pause times even on large heaps and is designed specifically
+to handle this "mostly small, occasionally huge" allocation shape well.
+This is a per-job Spark config (`spark.executor.extraJavaOptions`), not a
+cluster-wide JVM change — safe to try on a **shared** cluster since it only
+affects this job's own executor JVMs, never other tenants'. Since this
+project has no live-cluster access to benchmark GC behaviour directly (see
+"Known limitations"), treat this as a documented, reasoned option to A/B
+test against G1 under real production load, not a settled recommendation.
+
 ### Spark 4.1 / Scala 2.13 / JDK 21 upgrade notes
 
 - Spark 4.x is pre-built with **Scala 2.13 only** — Scala 2.12 support was
@@ -686,6 +970,16 @@ buffer size is worth profiling against actual zip sizes rather than guessed.
   this project) would need the same.
 - Spark 4.x requires **JDK 17+** at runtime; JDK 21 (an LTS release)
   satisfies this comfortably.
+- **Virtual threads (JEP 444) are used in production code, not just
+  discussed** — `HyperscanBundleLoader.prefetch` (see
+  [Performance & scalability](#performance--scalability)) uses
+  `Executors.newVirtualThreadPerTaskExecutor()`, a STABLE, non-preview JDK
+  21 API — no `--enable-preview` flag needed anywhere in the build or
+  deploy pipeline, unlike JDK 21's still-preview features (e.g. Structured
+  Concurrency, JEP 453), which this project deliberately does NOT use for
+  exactly that reason (a preview API would mean every executor JVM needs
+  `--enable-preview`, a real operational complication on a shared cluster
+  this project has no need to take on).
 - **Maven Surefire's JVM flags changed** from the JDK-11-era minimal set to
   a broader module-open set Spark itself documents as necessary for JDK
   17+ (`java.nio`, `java.lang.invoke`, `jdk.internal.misc`, in addition to
@@ -713,14 +1007,18 @@ Tests run against the `test` Spring profile (`application-test.yml`).
 **Both commands are confirmed to genuinely succeed end-to-end** in a real
 environment with the project's actual dependencies available (Maven
 Central, Spark, the BigQuery connector, and — critically — the real
-`com.gliwka.hyperscan` native library): `mvn clean test` runs all 126
+`com.gliwka.hyperscan` native library): `mvn clean test` runs all 138
 tests against that real Hyperscan library and real Jackson serialization
 (not a stub), and `mvn clean package` produces the shaded jar with the
 correct `Main-Class` manifest entry. (104 at the point this claim was first
-verified; grew to 126 across the NEAR/FOLLOWEDBY/AND-NOT `resolvedPatterns`
-work and the `HyperscanDatabaseLoader`/`TermMetadataLoader` →
-`HyperscanBundleLoader` zip-bundle consolidation — see "Known limitations"
-below for both.) This corrects an earlier claim in
+verified; 126 across the NEAR/FOLLOWEDBY/AND-NOT `resolvedPatterns` work and
+the `HyperscanDatabaseLoader`/`TermMetadataLoader` → `HyperscanBundleLoader`
+zip-bundle consolidation; 138 after this pass's performance work — new
+coverage for `HtmlStrippingService.identity()`/`OffsetMap.identity()` and
+`HyperscanBundleLoader.prefetch()`'s concurrency, capping, and best-effort
+failure handling, including a real timing-based test proving the virtual-thread
+prefetch genuinely runs concurrently rather than merely compiling — see
+"Known limitations" below for all three passes.) This corrects an earlier claim in
 this document that testing relied on a "hand-built stub environment" for
 Hyperscan — that was never accurate for this repository's own test
 classes, two of which referenced test-only static fields on
@@ -782,6 +1080,25 @@ bound.
 
 ## Known limitations / deferred work
 
+- **Performance/scalability pass (this pass) — not verified against a live
+  cluster or real production message-volume/skew profile.** See
+  [Performance & scalability](#performance--scalability) for full detail on
+  what changed: `Scanner` reuse and per-message HTML-strip caching in
+  `FeatureScanOrchestrator`, `HyperscanBundleLoader.prefetch`'s JDK 21
+  virtual-thread concurrent warm-up, and `ScanEngineJobRunner.applyJobSpecificSparkConf`'s
+  explicit AQE/skew-join/partition-sizing tuning. All of it is confirmed
+  correct by the full existing test suite passing unchanged (behaviourally
+  identical output, just less redundant work) plus new tests specifically
+  covering the new concurrency/caching behavior (138 tests total — see
+  "Build, test, deploy"). What remains genuinely unverified: the actual
+  MAGNITUDE of improvement (no before/after benchmark exists, since this
+  project has no live Dataproc/GCS access), and every specific numeric
+  config value (`skewedPartitionFactor=3`, `128m`/`64m` thresholds, the 200-row
+  prefetch lookahead, `max-cached-databases-per-partition`'s default of 20) —
+  all reasoned from the job's own architecture and documented Spark/Hyperscan
+  behaviour, not tuned against real production message-size/skew
+  distributions. Profile against real traffic before treating any of these
+  numbers as final.
 - **NEAR/FOLLOWEDBY proximity operator support (this pass)** — added for
   terms the Compile Service decomposes into QUIET Hyperscan leaves plus a
   `resolvedPatterns`/`patternMapping` description of the operator/distance
